k8s/tinyx-media/repo-media/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-media
  labels:
    app: tinyx
    module: repo-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx
      module: repo-media
  template:
    metadata:
      labels:
        app: tinyx
        module: repo-media
    spec:
      imagePullSecrets:
        - name: tinyx-pull-secret
      containers:
        - name: repo-media
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-14/repo-media
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "250m" # 0.25 cpu      #Arbitrary values to eventually customize or remove completely
              memory: "128Mi" # 128 Mega  #(These were instored to suppress an IDE warning)
