k8s/tinyx-media/repo-media/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: repo-media-service
spec:
  type: ClusterIP
  selector:
    app: tinyx
    module: repo-media
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
