k8s/tinyx-media/repo-media/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-media-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /media/upload
            pathType: Prefix
            backend:
              service:
                name: repo-media-service
                port:
                  number: 8080
